@@ -1,3 +1,9 @@
+2000-12-05  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* Fix from Craig Bruce (Cubewerx) for DBFReadAttribute() for
+	the white space trimming code to avoid reading outside allocated
+	memory.
+
 2000-11-02  Frank Warmerdam  <warmerda@cs46980-c>
 
 	* Checked in upgraded shputils.c from Bill Miller.
